--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,3 +41,7 @@ networks:
     ken:
         driver:
             bridge
+        ipam:
+          config:
+          - subnet: 172.20.0.0/24
+            gateway: 172.20.0.1
