--- a/php7-apache/config/docker-php-ext-xdebug.ini
+++ b/php7-apache/config/docker-php-ext-xdebug.ini
@@ -1,4 +1,4 @@
-zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20151012/xdebug.so
+zend_extension=xdebug.so
 xdebug.remote_enable=1
 xdebug.idekey=KEN
 xdebug.remote_mode=req
