--- a/php7-apache/Dockerfile
+++ b/php7-apache/Dockerfile
@@ -1,5 +1,5 @@
 FROM php:7.1.0-apache
-RUN apt-get update && apt-get install -y git zlib1g-dev
+RUN apt-get update && apt-get install -y git zlib1g-dev libxml2-dev
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
 RUN php -r "if (hash_file('SHA384', 'composer-setup.php') === 'e115a8dc7871f15d853148a7fbac7da27d6c0030b848d9b3dc09e2a0388afed865e6a3d6b3c0fad45c48e2b5fc1196ae') \
 	{ echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
@@ -8,6 +8,7 @@ RUN	php -r "unlink('composer-setup.php');"
 RUN	mv composer.phar /usr/local/bin/composer
 RUN docker-php-ext-install zip
 RUN docker-php-ext-install pdo_mysql
+RUN docker-php-ext-install soap
 RUN composer global require "laravel/installer"
 RUN echo 'export PATH="$PATH:$HOME/.composer/vendor/bin"' >> ~/.bashrc
 RUN a2enmod rewrite
@@ -24,5 +25,6 @@ RUN wget -c "http://xdebug.org/files/xdebug-2.5.3.tgz" \
     ) \
   && rm -r xdebug-2.5.3 \
   && docker-php-ext-enable xdebug
+
 RUN useradd -ms /bin/bash ken
 EXPOSE 9010
