upgrade to php 7.2

--- a/php7-apache/config/apache2/sites-available/000-default.conf
+++ b/php7-apache/config/apache2/sites-available/000-default.conf
@@ -28,12 +28,12 @@
 	#Include conf-available/serve-cgi-bin.conf
 </VirtualHost>
 
-<VirtualHost *:9010>
+<VirtualHost *:8080>
 
 	#ServerName www.example.com
 
 	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/html/suddenbuy2.0/public
+	DocumentRoot /var/www/html/fs-marketing-tool/public
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
