--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,18 @@ services:
     image: kencool107/php7-apache
     links:
       - db
+      - redis
     ports:
       - 9090:80
-      - 9999:443
-      - 9010:9010
+#      - 8080:80
+#      - 9999:443
+#      - 8080:8080
     volumes:
       - ~/workspace:/var/www/html
       - ./php7-apache/config/apache2/sites-available/000-default.conf:/etc/apache2/sites-available/000-default.conf
       - ./php7-apache/config/apache2/sites-enabled/000-default.conf:/etc/apache2/sites-enabled/000-default.conf
       - ./php7-apache/config/apache2/apache2.conf:/etc/apache2/apache2.conf
+      - ./php7-apache/config/apache2/ports.conf:/etc/apache2/ports.conf
       - ./php7-apache/config/php.ini:/usr/local/etc/php/php.ini
       - ./php7-apache/config/docker-php-ext-xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
     restart: always
@@ -39,6 +42,14 @@ services:
       restart: always
       ports:
         - "9001:80"
+  redis:
+      image:
+        redis:5.0.4
+      ports:
+        - 6378:6379
+      networks:
+        - ken
+      restart: always
 volumes:
   data: {}
 
