--- a/php7-apache/config/apache2/sites-available/000-default.conf
+++ b/php7-apache/config/apache2/sites-available/000-default.conf
@@ -6,7 +6,7 @@
 	# match this virtual host. For the default virtual host (this file) this
 	# value is not decisive as it is used as a last resort host regardless.
 	# However, you must set it for any further virtual host explicitly.
-	#ServerName www.example.com
+	ServerName www.example.com
 
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html
@@ -30,10 +30,11 @@
 
 <VirtualHost *:8080>
 
-	#ServerName www.example.com
+	ServerName www.example2.com
 
 	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/html/fs-marketing-tool/public
+	# DocumentRoot /var/www/html/fs-widget-ad/public
+	DocumentRoot /var/www/html/fs-tracking/public
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
