--- a/php7-apache/config/apache2/sites-available/000-default.conf
+++ b/php7-apache/config/apache2/sites-available/000-default.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:80>
+<VirtualHost *:8082>
 	# The ServerName directive sets the request scheme, hostname and port that
 	# the server uses to identify itself. This is used when creating
 	# redirection URLs. In the context of virtual hosts, the ServerName
@@ -40,3 +40,39 @@
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
+
+<VirtualHost *:8081>
+
+	ServerName www.example2.com
+
+	ServerAdmin webmaster@localhost
+	DocumentRoot /var/www/html/fs-widget-ad/public
+	# DocumentRoot /var/www/html/fs-tracking/public
+
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
+</VirtualHost>
+
+<VirtualHost *:80>
+
+	ServerName www.example2.com
+
+	ServerAdmin webmaster@localhost
+	DocumentRoot /var/www/html/toprentown/public
+	# DocumentRoot /var/www/html/fs-tracking/public
+
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
+</VirtualHost>
+
+<VirtualHost *:8083>
+
+	ServerName www.example2.com
+
+	ServerAdmin webmaster@localhost
+	DocumentRoot /var/www/html/rentown
+	# DocumentRoot /var/www/html/fs-tracking/public
+
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
+</VirtualHost>
